# clarifysae-llama-ambik-experiments

./: .gitignore  MANIFEST.sha256  README.md  SOURCE.md  clarifysae-experiment-runner-addition.patch  clarifysae-experiments-anthropic-method.patch  clarifysae_corrective_pilot_incremental.patch  clarifysae_selective_dense_current_repo.patch  pyproject.toml  requirements.txt
configs/: 1b_instruct_sweep_base.yaml  8b_instruct_sweep_base.yaml  README.md
configs/baselines/: baseline_llama31_8b_instruct_100.yaml  baseline_llama32_1b_instruct_100.yaml  clam_ambik_gemma2_9b.yaml  clam_ambik_gemma_2b.yaml  (+2 more)
docs/: ANTHROPIC_ADAPTATION.md  CODE_REVIEW_AND_EXECUTION_PLAN.md  REPOSITORY_SCOPE.md  RESEARCH_PLAN.md  RUN_DENSE_CLARIFICATION_EXPERIMENTS.md
scripts/: assess_corrective_pilot.py  build_ambik_actor_corpus.py  build_ambik_probe_corpus.py  build_decoder_similarity_feature_sets.py  build_selective_controls.py  compare_selective_arms.py  create_clam_demos.py  preflight_experiments.py  prepare_dense_experiment_configs.py  prepare_dense_experiment_data.py  prepare_llama_lmsys_tokenized_v2.py  run_baseline.sh  run_dense_clarification_pipeline.sh  run_selective_comparison.sh  run_selective_manifest.py  run_steered.sh  select_dense_layer.py  summarize_selective_clarification.py  sweep_single_feature_strengths.sh  validate_clam_demo_splits.py
tests/: test_ambik_actor_corpus.py  test_concept_vectors.py  test_corrective_pilot_assessment.py  test_corrective_pilot_data.py  test_dense_vector_steerer.py  test_json_protocol.py  test_selective_comparison.py  test_synthetic_corpus.py
(+89 files in other folders)
